All styles and welcome window (timer)

--- a/Lib_CourseWork/Lib_CourseWork/Form6.resx
+++ b/Lib_CourseWork/Lib_CourseWork/Form6.resx
@@ -57,4 +57,171 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAACQAAJVYAACVWAAAAAAAAAAA
+        AAAtNGYALTRmAC00ZgEtNGYALTRmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALTRmAC00
+        ZgAtNGYBLTRmAC00ZgAtNGYALTRmAC00ZgMtNGYJLTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00
+        ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00
+        ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00
+        ZggtNGYILTRmCC00ZgktNGYDLTRmAC00ZgAtM2cALTZjAC00ZrgtNGbtLTRm4i00ZeQtNGXkLTRl5C00
+        ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00
+        ZuQtNGbkLTRl5C00ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00ZeQtNGXkLTRl5C00
+        ZeQtNGXkLTRl5C00ZeQtNGXkLTRm4i00Zu0tNGa4LzRnACw0ZgAtNGYALTRmCC00ZuQtNGb/LTRn/S41
+        aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41
+        aP8uNWj/LjVo/y00Z/8tNGf/LjVo/y41aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41
+        aP8uNWj/LjVo/y41aP8uNWj/LjVo/y41aP8uNWj/LTRm/S00Zv8tNGbkLTRmCC00ZgAtNGYALTRmCC00
+        ZuItNGb/LDNk/CgwXv0oMF79KDBe/SgwXf0oMF39KTBd/SgwXf0oL139KTBd/SkwXf0pL139KS9d/Skw
+        Xv0pMF79KTBe/SkwXv0pMF79KS9d/SwzZP0sM2P9KTBc/SkwXf0pMF39KTBd/SkwXf0pMF39KS9d/Skv
+        Xf0pMF39KTBe/SkwXv0oMF79KTBd/SoxXf0qMV39KjBd/SowXf0qMF39LDNk/C00Zv8tNGbiLTRmCC00
+        ZgAtNGYALTRmCC00ZeQvNmr/IShO/RASJf8SFCj/EhUq/xIVKv8PFyz/Dhcs/xAYLf8RGS//Dhgs/wsX
+        K/8NGS7/DRgu/wsVKf8LFCn/CxQp/wsWKf8MFyr/CRQk/x8nS/8dJUn/CRMp/w0WLv8OFy//Dhcv/woX
+        Lf8KFy3/Cxgu/wsYLv8OFir/DxYp/w8WKf8QFyn/DBUr/wkTLP8JEyv/CRQs/woULf8JEyr/IipS/S82
+        af8tNGXkLTRmCC00ZgAtNGYALTRmCC01Z+QuMWP/KT9z/ROCyv8Sgcn/CGin/wZlo/88UYX/TE+A/zlA
+        b/8eKVL/Wz18/4NLmv9oLWD/aC9e/4twu/+Mc77/jXS9/31buv9zTrf/fFO+/0E6gf9ARWH/gHVs/3Vr
+        Zv9YUlD/XlBS/5NJa/+WSGv/gjVZ/4IxU/9WV5//SmW3/0Nar/8sS7H/d3ea/7Sbhv+qlov/p4l9/6WD
+        d/+mhXn/QEFo/SkxZf8uNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMGH/K0Z+/Q+i+/8Mnvf/An3P/wB5
+        yv9OZ6b/ZWai/0lPiP8jMF//ekyc/7Jfxv+MNXP/jThx/7WI9P+0h/f/tor2/51k8f+PUOz/nFr3/0s+
+        kv9MUGj/r5yG/5+Off91a13/fmdh/8JVe//DUXr/pz1j/6U3W/9xcMz/YoTw/1h15f84X+j/op/H//jS
+        qv/qy7H/5rid/+Svlf/jsZf/SUhu/ScwZP8vNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMWL/J0B2/QJ7
+        x/8BeMT/AF6v/wBbrP9KXpv/YGKc/0ZMg/8iLlz/c0mV/6havP+FNG7/gzNu/5Rd4/+SW+X/lV7l/3o3
+        3/9rI9r/dirk/0Avjf9MUWf/pZOA/5eHef9wZ1z/dWBb/6E8Yf+hOF//hzJR/4QuSv9mab//Xn7l/1Rw
+        2f81W9z/mZe9/+rGo//cwKn/2a+X/9emj//WqJD/R0Zt/ScwZf8vNWbkLTRmCC00ZgAtNGYALTRmCC01
+        Z+QuMWL/J0B2/QN+y/8Cfcr/AGKz/wBesP9KX53/YGOd/0ZMg/8iLl3/dEqX/6pbvv+GNG7/hDNv/5dg
+        5v+WX+j/mGLn/3074v9vKN3/eS3n/z8ujv9MUmf/ppSB/5qKev9yaV3/dmBb/6Q9Yv+lO2L/izNT/4gv
+        TP9oasH/X3/n/1Zx2/82XN7/mpi//+zIpP/fwqr/27CY/9moj//ZqZH/SEZt/ScwZP8vNWbkLTRmCC00
+        ZgAtNGYALTRmCC01Z+QuMWP/Jz92/QJ8yf8Ce8j/AGGy/wBcr/9LX53/YmSe/0dNhf8jL17/dUqX/6pb
+        vv+GNG7/hDJv/5Ve5v+VXuf/l2Hn/3w54f9uJt3/eCvn/z8tjv9MUmf/ppSB/5qKe/9zaV3/dmBb/6M8
+        Yf+kOmH/ijNT/4YuS/9nasH/X3/n/1Zx3P82XN7/m5i//+zJpf/fwqv/27GZ/9mpkf/ZqpL/SEZt/Scw
+        ZP8vNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMWL/KEJ5/QWD0f8Df83/AWS1/wBgsv9JXpz/XF+Y/0NJ
+        f/8gLFj/dEmV/6pbvv+GM23/hTRv/5pl5v+YYuj/mmbo/4A+4v9yK97/fTPo/0M0jv9LUGf/pZOA/5qK
+        e/9zaV7/dmFc/6hBZv+nPWT/jjRV/4owTf9oasH/X3/n/1Zx3P81W97/mpi//+zGov/ewKj/2q6V/9il
+        jP/Yp4//SEdt/ScwZP8vNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMGH/K0V9/RKi+v8QoPj/A4DO/wN7
+        yP8rRXv/MjVp/yQsU/8IFSf/akCD/6xdwf+FMmz/hzdu/7KL6/+yjO//tI7u/51q6f+RWeX/nWLv/0o/
+        j/9LT2j/qZeD/5+Ofv92a1//eWRe/75YfP/BVX3/pz9m/6Q4Xf9vbcX/YIDn/1lz3P84X+H/mo+1/+Sv
+        jf/Yq5b/0JR2/8uIZv/MjGz/RkNp/ScxZf8uNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMGH/KkV8/RKj
+        /P8Ro/z/BILR/wJ8yf8mP3T/MDNm/yIpUP8GFCT/aj+C/6xdwf+FMmz/hjdu/7OM6/+1j+//tpDu/59t
+        6f+TXOX/nmTv/0o/kP9GSmP/i3ts/4FzZ/9mXlT/bFlW/75Yff/DV3//qUBn/6c5Xv9jZMP/S3Dj/0dk
+        1/8kTdf/koat/+Wui//XqZT/z5Fz/8qGZP/LiGf/RkFm/SgxZv8uNWbkLTRmCC00ZgAtNGYALTRmCC01
+        Z+QuMGH/KkV8/RKi+/8Qovv/BILR/wJ7yP8nP3X/MDNm/yMqUv8HFCX/aj+C/6tcwP+FMmz/hzdu/7OL
+        6/+0ju//tY/u/5xo6P+TXOX/nWPu/0xBkf8+Qlz/dGZa/25iWf9bVU3/ZFNQ/75XfP/DV3//qUBn/6Y5
+        Xv9WW8L/Pmbh/zta1P8XQdD/jYGr/+avjP/XqpX/z5J1/8uGZf/LiWj/RkFm/SgxZv8uNWbkLTRmCC00
+        ZgAtNGYALTRmCC01Z+QuMGH/KkV8/ROk/f8Qovr/A3/N/wN9yv8oQXj/MTRm/x8mSf8GEyL/akCE/6xe
+        w/+DMGj/hzdv/7SN6/+4lPD/q4Ds/5Ve5/+VX+X/nWPu/0xBkf8/Q13/eGpe/3JlXP9eWE//ZlRS/71X
+        fP/EWH//qUBn/6Y5Xv9YXML/QWjh/z5d1f8aRNL/jYKt/+avjP/Wp5H/zIxs/8qGZP/LiWj/RkJo/Scx
+        Zv8uNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMGH/KkV8/RGg+P8IjN3/AXvH/wJ+y/9EX5v/Q0Z7/ykw
+        Xf8fLFT/cUaP/5tHlf9+KVr/iDhy/6+F6v+oe+z/l2Dn/5Ve5/+VX+X/nWPu/0xBkf89Qlz/c2Za/29j
+        Wv9cVU3/ZFNQ/8Baf/+8UXj/pDtj/6c7YP9VWsL/P2bh/zpa0/8WP8//jIu4/+zFof/XrJb/1aCG/9ai
+        iP/Wo4r/SEZt/ScwZP8vNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMWL/J0F3/QN/zP8Be8j/An3K/wN9
+        yf8tQnn/LzFi/y00Z/8oNWj/YzFm/4crXv+AK1z/hTVz/5Zf5f+UXOf/ll7n/5Zf5/+VXuX/nmPv/0o/
+        j/9GS2T/jn5v/3RoXv9hWlH/bVlW/69Hbf+nO2P/pDlh/6g5Xv9lZcP/R23i/zpZ0/8kTdf/lYqw/+i1
+        kP/XqJH/2qqS/9urk//aqpH/SEZs/ScwZf8vNWbkLTRmCC00ZgAtNGYALTRmCC01Z+QuMWL/J0B2/QR9
+        yv8Ffsv/BX3K/wR/zP8kR3//MDVm/zI5a/8sOWr/ZDJl/4gvZP+BLl//hjd1/5Zg5f+XYef/lmDm/5Zg
+        5/+VYOX/nmTu/0tAkP9FSWL/i3xt/3RoX/9yZ13/dmVe/51AYf+lPWX/pEBn/6c+Y/9hZMT/RWvh/0hm
+        2f89Y+H/jIa4/92rjv/UqJT/1qmT/9ipkv/TqZb/REZw/SgwZP8uNWfkLTRmCC00ZgAtNGYALTRmCC01
+        Z+QuMWL/J0B2/QF7yv8Aecr/AHnJ/wJ7y/8AdMb/P4fD/5qixP+PqM3/h1aG/38cU/+AJFf/gytr/5VY
+        5f+WWur/llno/5ZZ6f+UWef/nV3w/0xBkf89Qlv/cGFS/2xeUv9uYFP/bmFU/29aTf+PiZ3/nqbM/5+i
+        w/9Rbdf/N1vd/z5f2/88X9z/O13c/1tz0/+ircr/oa3J/6Ktyv+erMv/PEZ2/SowYv8uNWfkLTRmCC00
+        ZgAtNGYALTRmCC41Z+QqMGP/OkR1/VyZzf9Qls7/UpbO/1OXzv9Ols//gajS/6Kw0v+etNb/l5W8/49t
+        mf+QcZz/kHGe/5iE0f+Zid3/mYjb/5mI2/+Yh9r/oJHh/0hNg/9FTnf/kJWi/4aKl/+Ii5n/iIuY/4eM
+        mP+Wqcf/m7HV/52x0v+DmtT/b4jW/3KL1f9yi9X/bojW/32V1f+br9H/mazR/5qt0v+ZrND/PUZ1/Skw
+        Y/8uNWfkLTRmCC00ZgAtNGYALTRmCC41Z+QpMGP/PkZ1/aOuz/+lsND/pa/P/6Wvz/+mr8//nq3O/5ir
+        zv+Zqs7/mrDS/5y21/+ctdf/m7XW/5qyzv+asc3/mrHN/5qxzf+ZsMz/orrU/0hSf/9IUoH/pLne/5yv
+        1v+dsdf/nbHX/52x2P+brNH/mqvO/5qrzv+er87/obHO/6Cxzv+gsc7/obHO/5+wzv+aq87/mqvO/5qs
+        z/+aq87/PkZ2/SkwYv8uNWfkLTRmCC00ZgAtNGYALTRmCC41Z+QqMWP/OkNz/Zmt0P+fs9b/nbLU/56y
+        1f+estX/n7PV/6Cz1f+gs9X/oLLU/6Cx0/+gsdP/oLHT/6Cx1f+gstX/oLLV/6Cx1f+fsdT/pbfa/0VO
+        ff9FTn3/pbfY/5+x0v+fstP/oLLT/6Cy0/+gs9T/oLPV/6Cz1f+fstX/n7LV/5+y1f+fstX/n7LV/5+y
+        1f+gs9X/oLLU/6G01v+crtH/O0Nz/SoxY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00ZuQtNGb/LjRn/UlT
+        g/9RW4v/T1qJ/1Baif9QWor/UFuK/1Bbiv9QWor/UFqJ/1Baif9QWon/UFqJ/1Baif9QWon/UFqJ/1Ba
+        if9RW4r/TliH/zA3av8wN2r/TliI/1Fbiv9QWon/UFqK/1Baiv9QWor/UFqK/1Baiv9QWor/UFqK/1Ba
+        iv9QWor/UFqK/1Baiv9QWor/UFqJ/1Fci/9KU4P/LjVn/S00Zv8tNGbkLTRmCC00ZgAtNGYALTRmCC00
+        ZuQuNWf/KjFg/R0lTP8cJEz/HSRM/x0kTP8cI0z/HCJL/xwiS/8cIkv/HCJM/xwiTf8cI03/HSNN/xwj
+        Tf8bI03/GyNN/xsjTf8bI03/GyNM/ygwXv8oL13/GyJL/xwjTP8cI0z/HCNM/xwjTP8cI0z/HSNM/xwj
+        TP8cIkz/HCJM/xwjTP8cI0z/HCNM/xwjTP8cI0z/HCNM/xwiTP8dI0z/KjFg/S41Z/8tNGbkLTRmCC00
+        ZgAtNGYALTRmCC00ZeQvNmn/IilR/RIYMf8UGjX/Exoz/xMaM/8UGzP/FSA1/xUgNP8UHjT/FB8y/xQf
+        MP8UHjD/Ex4v/xUeL/8ZHjD/GB4w/xgdMP8YHTD/Fhsr/yMpTP8gKEv/FB0w/xYfNP8WHjT/Fh40/xYf
+        NP8WHzT/ERsy/xUdM/8WHzT/Fh80/xUeNP8THTT/Fh80/xYeNP8WHjT/Fh40/xYfNP8VHTH/JCxU/S41
+        af8tNGXkLTRmCC00ZgAtNGYALTRmCC00Z+QsNWP/MjJ2/UUdyf9FHMz/RB63/z4Wnf9OPq//kuTr/4fZ
+        4/9tvt//ZrCC/2KnRf9cnkj/QIoy/36KO//fh0f/1olG/8t8RP+4akL/xnNB/1hDV/9BUIP/k6PD/4uc
+        vv+Mnb//jJ2//4ucvv+Hmb3/qrTJ/9DR1v/Q0tb/0NLW/7i7wP+Zpb3/iZu//4ydv/+Mnb//jJy//4yd
+        v/+Mnb//PER0/SowY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNGL/MzJ4/U0d3/9NHOT/Sx/L/0UV
+        rf9WQ8H/k/H9/4Xf8f9pvej/bL2I/2++Sf9nskr/Rpsx/4+bPP//mEr/9ZtJ/+iMR//SdkP/4oBD/15F
+        Vv9EVYn/p7jZ/52w0/+fsdT/nrDU/6K01v/V2+f/9fTy//Py8f/y8vH/8vLx/9bV1P/R0c//u8PT/5+x
+        1P+fsdT/n7HU/5+y1f+esNP/PUZ2/SkwYv8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNWL/MjJ4/Usd
+        2v9LHN7/SR7G/0QWqv9PPLr/ddDn/2u/3P9Tmc//Yq1+/267Sf9jrEj/RZcx/4uXPP/3k0n/7ZZI/+GI
+        Rv/Mc0P/231D/1xEVv9DU4f/orPU/5mrzv+brc//lKfN/73H2//18+//6urr/+vr6//u7u7/4ODg/8nJ
+        yv/Ly8v/0M7L/6e1zv+Xqs//mqzP/5utz/+Zq87/PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00
+        Z+QsNWL/MjJ4/Usd2v9LHN//SR7H/0UWqv9PPLr/edTr/3DF3/9Wn9P/ZK+A/268Sf9jrEj/RZcx/4uY
+        PP/4lEn/7pdI/+KIRv/NdEP/3H1D/11EVv9DVIj/o7TV/5qsz/+crtD/lqnP/9DW4v/u7ez/6Onp/+jp
+        6P/f397/zM3M/8vLyv/Ly8z/z87M/7S9z/+Xq9D/nK3Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00
+        ZgAtNGYALTRmCC00Z+QsNWL/MjJ4/Uwd3P9LHOL/Sh7J/0YXrf9QPLz/dtHp/23B3f9Um9D/Y65//268
+        Sv9jq0f/RZcx/4yYPP/6lkn/8JlI/+SKR//OdUT/3n5E/11FVv9DVIj/o7TV/5qsz/+ardD/na/Q/8zN
+        z//S0c7/0dDQ/9LO0//Py9D/0MzR/9HN0v/Ozcz/0c/L/8PGzf+arND/m63Q/5ut0P+arM//PUZ1/Skw
+        Y/8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNGL/MzJ4/Usd0/9LHNX/Rx29/z8Sn/9PPrT/g9/x/3bM
+        5P9dqNn/ZrOC/267Sf9iq0f/RZcx/4uXPP/yjkj/6JBH/9yCQ//Gbj3/13g+/1xEVv9EVIj/o7TV/5qs
+        z/+ardD/na7Q/7zCzf/Cxc7/vsXG/7bHsP+3yLH/t8ix/7jIs//Axsr/w8fN/7i/zv+ardD/m63Q/5ut
+        0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNWP/MjFz/UcdsP9IHrL/PRqZ/yoI
+        dv9DOpX/of3//5Pt9/920PL/cMGL/2y5SP9iq0f/Rpkx/4KOOv/ZdET/0HhE/8RsOf+wWyr/v2Mq/1c+
+        T/9FVYn/o7TV/5qsz/+brdD/mq3Q/5msz/+crNf/j6+y/2e4Sf9puE7/Z7dK/2i0UP+Vqsj/m6vV/5ms
+        z/+brdD/m63Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNWP/MTFy/Ucd
+        sP9JHrT/PRqa/ysIeP9EOZf/n/v//5Hr9v91zvH/b8GL/2y5SP9hqkb/Rpkx/4KNOv/ZdUT/0XlE/8Zt
+        Ov+xXCv/wGMr/1Y9Tf9FVYn/o7TV/5qsz/+brdD/m63Q/5utz/+erdb/kK+z/2q5Tf9ruFH/brtT/3zF
+        Zv+Zv7H/nLHM/5us0f+brdD/m63Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00
+        Z+QsNWP/MTFy/Ucdrv9JHrP/PRqa/ysId/9DOZb/nvr//5Hr9v91zvH/b8CL/2y5R/9hqkb/Rpkx/4GM
+        Ov/Yc0P/0XpF/8JqN/+xWyv/v2Iq/1Y8Tf9FVYn/o7TV/5qsz/+brdD/m63Q/5utzv+dq9j/kK+0/2m4
+        S/9otU3/e8Zh/6Lpjf+d63//nMK1/5up1f+brs//m63Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00
+        ZgAtNGYALTRmCC00Z+QsNWP/MjF0/UcdtP9JHbf/OxmW/y0Je/9EOpn/of3//5Dq9f90zfH/ccKM/225
+        SP9boz//Rpkx/4SQOv/fekX/zXZB/7lhL/+0Xi3/wWUt/1g/UP9FVYn/o7TV/5qsz/+brdD/m67P/5uq
+        1P+cx67/neWG/5jfgv9xvlf/aLZM/3C6Wf+XscH/nKzT/5utz/+brdD/m63Q/5ut0P+arM//PUZ1/Skw
+        Y/8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNGL/MzJ4/Uwf2v9KHcn/Rx+t/0IVqf9UQrr/lfH7/33W
+        6v92z/L/bL2I/1ukNv9TmDf/SJo0/4eTPP/mgkf/znhD/810Qv/MdEP/2nxD/11FV/9EVIf/o7TV/5qs
+        z/+brdD/m63P/5ur0v+cu7//mM+Z/4TPa/9tulP/cLxU/4TMbv+ayKj/nLXH/5us0f+brdD/m63Q/5ut
+        0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC00Z+QsNWP/MS9z/UQXtf9EGK7/RRqw/0IR
+        rv9OObr/dtDo/3TN5P950/T/Xatx/0uRH/9RmTL/RZst/4GKNP/acT//0XY+/9R2P//RdT//33s9/15E
+        U/9DVIj/o7TV/5qsz/+brdD/m63Q/5qtz/+dq9j/kLC0/2u5Tv9otU7/ecRg/53liP+c5oT/nMC4/5uq
+        1P+brs//m63Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC40Z+QrMmP/Nztz/Vk8
+        tv9TMbb/VDW2/1Iss/9aT7//d9Hp/3bO5v940fH/Z7ib/1eeRv9fnU7/V55M/3uVUP/Nf1j/yYBY/8mA
+        WP/Iflf/0Yhf/1NJZv9FU4X/o7TW/5qsz/+brdD/m67P/5up1f+cy6n/net+/57ohP96xmD/ZbVF/3C4
+        XP+arsv/m6zS/5utz/+brdD/m63Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00ZgAtNGYALTRmCC41
+        Z+QpMGP/Pkd1/Zuu0P+brNH/mqzQ/5yrz/+VstT/ddHp/3TR6f910On/c9Tv/37J4/+crM//m63Q/5iu
+        z/+arc//nK3P/5utz/+brM7/orXY/0ZSgv9IUX//orXX/5qsz/+brdD/m63Q/5us0v+btsP/ncO3/5TE
+        n/9xu1r/bbdX/4uwpf+drNb/m63P/5ut0P+brdD/m63Q/5ut0P+arM//PUZ1/SkwY/8uNWfkLTRmCC00
+        ZgAtNGYALTRmCC41Z+QqMGP/PER1/Zmrzv+crtD/m63P/5ut0P+brdD/krbW/5C42P+RuNf/j7jX/5Wz
+        1P+crND/m63Q/5ut0P+brdD/mq3Q/5qt0P+ZrM//orTW/0dRf/9HUX//orTW/5qrz/+brdD/m63Q/5ut
+        z/+bq9L/m6nV/5qp0/+WrcT/mK3J/52s1v+brc//m63Q/5ut0P+brdD/mqzQ/5ut0P+aq8//PUV1/Skw
+        Y/8uNWfkLTRmCC00ZgAtNGYALTRmCC41Z+QpMGL/PUZ2/Zut0P+crtH/m63Q/5ut0P+brdD/nazP/56r
+        z/+eq8//nqvP/52sz/+brtD/m63Q/5uu0P+crdD/nK3Q/5yt0P+arM//o7bY/0hSgP9IUoD/o7bY/5qs
+        z/+brtD/m67Q/5ut0f+crtD/m67P/5yu0P+drdP/nK3S/5uuz/+crtH/m67Q/5uu0P+brtD/m63Q/5yu
+        0f+crtH/Pkd2/SkwYv8uNWfkLTRmCC00ZgAtNGYALTRmCC41Z+QqMWT/OEBw/ZOlyf+brdD/mavO/5qs
+        z/+arM//mazP/5msz/+ZrM//mazP/5msz/+arM//mqzP/5qsz/+arM//mqzP/5qrz/+Zq87/na/S/0JL
+        ev9CS3r/na/S/5mrzv+aq8//mqzP/5qsz/+arM//mqzP/5qsz/+ZrM7/mqzO/5qsz/+arM//mqzP/5qs
+        z/+arM//mavO/5ut0P+Upcn/OEBx/SoxZP8uNWfkLTRmCC00ZgAtNGYALTRmCC00ZuItNGb/LDNl/DhA
+        cP09Rnb9PEV1/T1Fdf09RXX9PUV1/T1Fdf09RXX9PUV1/T1Fdf09RXX9PUV1/T1Fdf09RXX9PUV1/TxF
+        df09RnX9OkNz/S00Zv0tNGb9OkNz/T1Gdf08RXX9PUV1/T1Fdf09RXX9PUV1/T1Fdf09RXX9PUV1/T1F
+        df09RXX9PUV1/T1Fdf09RXX9PEV1/T1Gdv04QHH9LDNl/C00Zv8tNGbiLTRmCC00ZgAtNGYALTRmCC00
+        ZuQtNGb/LTRm/SoxZP8pMGL/KjBj/ykwY/8pMGP/KTBj/ykwY/8pMGP/KTBj/ykwY/8pMGP/KTBj/ykw
+        Y/8pMGP/KTBj/yowY/8pMGP/KjFj/y00Zv8tNGb/KjFj/ykwY/8qMGP/KTBj/ykwY/8pMGP/KTBj/ykw
+        Y/8pMGP/KTBj/ykwY/8pMGP/KTBj/ykwY/8pMGP/KjBj/ykwYv8qMWT/LTRm/S00Zv8tNGbkLTRmCC00
+        ZgAsM2QAMTdtAC00ZrgtNGbtLTRm4i41Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C41
+        Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C00ZuQtNGbkLjVn5C41Z+QuNWfkLjVn5C41
+        Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C41Z+QuNWfkLjVn5C41Z+QuNWfkLTRm4i00
+        Zu0tNGa4KzVlAC40ZgAtNGYALTRmAC00ZgMtNGYJLTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00
+        ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00
+        ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00ZggtNGYILTRmCC00
+        ZggtNGYILTRmCC00ZgktNGYDLTRmAC00ZgAtNGYALTRmAC00ZgEtNGYALTRmAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAALTRmAC00ZgAtNGYBLTRmAC00ZgCX/////+kAAEAAAAAAAgAAwAAAAAAD
+        AACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAA
+        AAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAAB
+        AACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAA
+        AAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAAB
+        AACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAA
+        AAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAADAAAAAAAMAAEAAAAAAAgAAl//////p
+        AAA=
+</value>
+  </data>
 </root>
